--- a/projects/templates/projects/project_index.html
+++ b/projects/templates/projects/project_index.html
@@ -6,6 +6,9 @@
 {% for project in projects %}
     <div class="col-md-4">
         <div class="card mb-2">
+            {% if project.image %}
+                <img class="card-img-top" src="{{ project.image.url }}">
+            {% endif %}
             <div class="card-body">
                 <h5 class="card-title">{{ project.title }}</h5>
                 <p class="card-text">{{ project.description }}</p>
@@ -18,4 +21,4 @@
     </div>
     {% endfor %}
 </div>
-{% endblock %}
+{% endblock %}  
